--- a/.github/workflows/tweet-updater.yml
+++ b/.github/workflows/tweet-updater.yml
@@ -2,9 +2,8 @@ name: Update Latest Tweet
 
 on:
   schedule:
-    # Runs every 12 hours
     - cron: '0 */12 * * *'
-  workflow_dispatch: # Allows manual trigger
+  workflow_dispatch: 
 
 jobs:
   update-tweet:
@@ -16,7 +15,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18' # Use a stable Node.js version
+          node-version: '18'
 
       - name: Install dependencies
         run: |
@@ -28,7 +27,7 @@ jobs:
           CONSUMER_SECRET: ${{ secrets.TWITTER_SECRET }}
           ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
           ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
-          TWITTER_HANDLE: sanskar2804 # Replace with your Twitter handle (e.g., yourusername)
+          TWITTER_HANDLE: sanskar2804 
         run: |
           node -e '
             const { TwitterApi } = require("twitter-api-v2");
